--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/react-query": "^5.66.11",
     "bootstrap": "^5.3.3",
+    "i18next": "^24.2.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
     "tailwind-scrollbar-hide": "^2.0.0",
