--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/react-query": "^5.66.11",
     "bootstrap": "^5.3.3",
@@ -19,13 +20,13 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
-    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
     "tailwind-scrollbar-hide": "^2.0.0",
-    "tailwindcss": "^4.0.9"
+    "tailwindcss": "^4.0.9",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
