--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-router": "^7.2.0",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^4.0.9",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "typescript-eslint": "^8.29.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
